samples/_failures_safe/1761562815_e56fa4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc750688.c: In function ‘tokenize_input’:
./samples/SAFE/__tmp_fc750688.c:149:57: error: expected declaration or statement at end of input
  149 | int tokenize_input(struct TokenizerState *state, struct Parser *parser) {
      |                                                         ^~~~~~
